<resources>

    <!-- GENERAL -->
    <string name="app_name">AANews</string>
    <string name="back_to_exit">Press back again to exit</string>

    <!-- ERRORS -->
    <string name="no_internet">Please check your internet connection</string>
    <string name="error_please_try_again">There was an error. Please try again</string>
    <string name="error_code_description"><![CDATA[Error code: %d & description: %s]]></string>

    <!-- HEADLINES -->
    <string name="tab_headlines">Headlines</string>
    <string name="title_headlines">Local Headlines</string>

    <!-- MY NEWS -->
    <string name="tab_my_news">My News</string>

    <!-- BOOKMARKS -->
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tractor_time">You have not saved any articles.\n\n\n\n\n\nHere\'s a tractor!</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="share_article_title">Share article</string>
    <string name="bookmark_saved">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>

    <!-- SEARCH -->
    <string name="tab_search">Search</string>
    <string name="search_description">Try searching for something</string>

    <!-- SETTINGS FRAGMENT -->
    <string name="settings_swipe_off">Share/Bookmark articles</string>
    <string name="settings_swipe_on">Swipe between bottom categories</string>
    <string name="settings_swipe_title">Swipe behaviour</string>
    <string name="settings_title">Settings</string>
    <string name="settings_headline_ui_mode_selection">Choose your interface mode</string>
    <string name="settings_system_mode_display">Follow system settings</string>
    <string name="settings_light_mode_display">Light mode</string>
    <string name="settings_dark_mode_display">Dark mode</string>
    <string name="preference_key_ui_mode">key_pref_ui_mode</string>
    <string name="preference_key_swipe">key_swipe</string>

    <!-- SETTINGS FRAGMENT - NEWS -->
    <string name="settings_news_technology">Technology</string>
    <string name="settings_news_travel">Travel</string>
    <string name="settings_news_bitcoin">Bitcoin</string>

    <!--  WEBVIEW  -->
    <string name="ssl_error_not_yet_valid">The certificate is not yet valid.</string>
    <string name="ssl_error_mismatch">The certificate domain doesn\'t match.</string>
    <string name="ssl_error_expired">The server certificate has expired.</string>
    <string name="ssl_error_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_error">SSL Certificate error.</string>
    <string name="ssl_error_continue">\" Do you want to continue anyway?\"</string>
    <string name="ssl_button_continue">Continue</string>
    <string name="ssl_button_cancel">Cancel</string>

    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="undo_action">Undo</string>

</resources>
